--- a/login.css
+++ b/login.css
@@ -116,7 +116,7 @@ div.active{
 .submit-button{
     position: absolute;
     top: 90%;
-    left: 50%;
+    left: 57.5%;
     transform: translate(-50%, -50%);
     background: white;
     height: 40px;
@@ -126,17 +126,7 @@ div.active{
     border-radius: 5px;
     transition: : all 0.5s ease;
 }
-.submit-button{
-  border:none;
-    width: 196px;
-    background: white;
-    color: #000;
-    font-size: 16px;
-    line-height: 25px;
-    padding: 10px 0;
-    border-radius: 5px;
-    cursor: pointer;  
-}
+
 
 .login-button{
     position: absolute;
@@ -151,6 +141,8 @@ div.active{
     border-radius: 5px;
     transition: : all 0.5s ease;
 }
+
+
 .sign-button{
     position: absolute;
     top: 30%;
@@ -172,6 +164,27 @@ div.active{
     background: white;
     height: 40px;
     width: 400px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    transition: : all 0.5s ease;
+}
+#show-onclick,
+#show-onclick1,
+#show-onclick2,
+#show-onclick3,
+#show-onclick4,
+#show-onclick5{
+    display: none;
+}
+.cancile-button{
+    position: absolute;
+    top: 90%;
+    left: 42.5%;
+    transform: translate(-50%, -50%);
+    background: white;
+    height: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
